rsfg/tests/scripts/error/call-with-unknown.sfg
fn main()
	log(unknown_ident)

